<resources>
    <string name="app_name">تعلم</string>
    <string name="title_activity_forget_password">نسيت كلمة المرور</string>
    <string name="title_activity_register">التسجيل</string>
    <string name="facebook_app_id">1207926826002896</string>
    <string name="fb_login_protocol_scheme">fb1207926826002896</string>
    <string name="title_activity_fblogin">FACEBOOK</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_forget_password2">نسيت كلمة المرور</string>
    <string name="title_activity_first_login">مرحبا بك </string>
    <string name="title_activity_first_loign2">مرحبا بك</string>
    <string name="follow_button_text">متابعه</string>
    <string name="share_button_text">اشترك</string>
    <string name="about_book_detail">عن الكتاب</string>
    <string name="teacher_book_detail">المُعلم</string>
    <string name="duration_book_detail">المُده</string>
    <string name="shares_book_detail">المشاركين</string>
    <string name="person_share_book_detail">مشارك</string>
    <string name="followers_book_detail">المتابعين</string>
    <string name="person_follow_book_detail">متابع</string>
    <string name="comments_header">التعليقات</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">البريد الالكترونى</string>
    <string name="password">كلمة المرور</string>
    <string name="forgot_password"><u>نسيت كلمة المرور؟</u></string>
    <string name="sign_in"><b>تسجيل الدخول</b></string>
    <string name="facebook">Facebook</string>
    <string name="sign_up"><u>ليس لديك حساب؟ سجل الان</u></string>
    <string name="name">الاسم</string>
    <string name="register">تسجيل</string>
    <string name="forgetPassword">ارسال</string>

    <string name="next">التالي</string>
    <string name="finish">انتهاء</string>
    <string name="network_error">خطأ بالشبكة</string>
    <string name="signing_in">جاري تسجيل الدخول..</string>
    <string name="registering">جاري التسجيل..</string>
    <string name="sendingCode">يتم ارسال الكود..</string>

    <string name="add_comment">اضف تعليق</string>
    <string name="add_comment_button">اضف</string>
    <string name="message_tittle">الرسائل</string>
    <string name="send_edit">اكتب هنا...</string>
    <string name="yo3alemalan">يُعلم الان</string>
    <string name="alreadyafollower">الغاءالمتابعه</string>
    <string name="alreadysubscribe">الغاءالمشاركه</string>
    <string name="profile_send_message">رساله</string>
    <string name="friends_header">الاخوه</string>
    <string name="search_home">بحث</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="edit">تعديل</string>
    <string name="name_edit">الاسم</string>
    <string name="about_edit">عن</string>
    <string name="all_books_header">الدورات</string>
    <string name="all_book_header">الكتب</string>
    <string name="sending">ارسال</string>
    <string name="send">ارسال</string>
    <string name="sendingCodenow">يتم ارسال الكود</string>
    <string name="personal_code">الرمز الشخصي</string>
    <string name="confirm_password">تأكيد كلمه المرور</string>
    <string name="study_now">يدرس الان</string>
    <string name="add_post">اضف منشور</string>
    <string name="wall">الحائط</string>
</resources>
