<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="yackeen.education.ta3allam.ui.activity.EditProfileActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_profile_toolbar"
        android:layoutDirection="ltr"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/edit"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:layout_gravity="right"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:id="@+id/relativeLayout"
        android:layout_below="@+id/edit_profile_toolbar"
        android:layout_centerHorizontal="true">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/default_emam_larg"
        android:layout_centerHorizontal="true"
        android:id="@+id/edit_profile_image"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/edit_icon"
            android:background="@color/colorPrimary"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/edit_icon"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:id="@+id/linearLayout">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/name_edit"
        android:layout_marginRight="5dp"
        android:padding="5dp"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_name_edit_text"
        android:hint="الاسم"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
         />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/about_edit"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            android:id="@+id/about_word_edit"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_about_edit_text"
            android:hint="عن"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btn_log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:paddingTop="@dimen/edit_text_padding"
        android:paddingBottom="@dimen/edit_text_padding"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textColor="@color/colorTextTitle"
        android:textSize="@dimen/text_subheading_size"
        android:background="@drawable/button_login_selector"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>
</RelativeLayout>
