<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:theme="@style/ThemeOverlay.AppCompat"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.NoActionBar"
        android:id="@+id/app_bar_layout">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
            android:id="@+id/book_toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="40dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="اسم الفقه"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="30dp"
                    android:paddingRight="10dp"
                    android:id="@+id/user_name_text"/>

            </LinearLayout>

        </android.support.v7.widget.Toolbar>



        <LinearLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            app:tabGravity="fill"
            app:tabMode="fixed"
            android:layout_gravity="bottom"
            >


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:id="@+id/linear2">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_buton_with_white_border"
                android:id="@+id/subscribe_user_button"
                android:textColor="@android:color/white"
                android:text="@string/share_button_text"
                android:textSize="18sp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_buton_with_white_border"
                android:id="@+id/follow_user_button"
                android:textColor="@android:color/white"
                android:text="@string/follow_button_text"
                android:textSize="18sp"
                android:layout_marginLeft="5dp"/>


        </LinearLayout>


    </android.support.design.widget.AppBarLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_profile_image"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_gravity="right"
                android:gravity="right">

                <TextView
                    android:id="@+id/textView_watch_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="left|bottom"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="6dp"
                    android:text="مشاهدة الكل"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yo3alemalan"
                    android:textSize="25sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="right"
                    android:layout_weight="3"
                    />

            </LinearLayout>
            <GridView
                android:id="@+id/courses_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="2"
                android:orientation="vertical"
                >
            </GridView>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="عن"
                android:textSize="25sp"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="right"/>
            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="المتابعين"
                android:textSize="25sp"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="right"/>
            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:id="@+id/followers_list">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>